fix(pr-view): Align all icons including plus icon

--- a/code-review-management/app/(pages)/(protected)/[username]/[repo_name]/pull/[id]/_components/UserLister/UserLister.module.css
+++ b/code-review-management/app/(pages)/(protected)/[username]/[repo_name]/pull/[id]/_components/UserLister/UserLister.module.css
@@ -10,6 +10,14 @@
   align-items: center;
 }
 
+.iconWrapper {
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .plusIcon {
   cursor: pointer;
 }
@@ -35,12 +43,4 @@
 .username {
   font-size: 1rem;
   font-weight: 500;
-}
-
-.stateIconContainer {
-  width: 20px;
-  height: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
